--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -142,7 +142,7 @@
           </nav>
           <div class="credits ml-auto">
             <span class="copyright">
-              &copy; {{test | date: 'yyyy'}}, Managed by <a href="https://www.keryar.com">Keryar</a>
+              &copy; {{test | date: 'yyyy'}}, Design & Develop by <a href="https://www.keryar.com">Keryar</a>
             </span>
           </div>
         </div>
