--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
     </a>
 
     <a routerLink="/dashboard" class="simple-text logo-normal">
-        Angrez The Salon
+        Keryar Salon
     </a>
 </div>
 
@@ -39,12 +39,12 @@
                             <span class="sidebar-normal" routerLink="password">Change Password</span>
                         </a>
                     </li>
-                    <!--<li>
-            <a href="javascript:void(0)">
-              <span class="sidebar-mini-icon">EP</span>
-              <span class="sidebar-normal">Edit Profile</span>
-            </a>
-          </li> -->
+                    <li>
+                        <a href="javascript:void(0)">
+                            <span class="sidebar-mini-icon">PR</span>
+                            <span class="sidebar-normal">Profile</span>
+                        </a>
+                    </li>
                     <li>
                         <a href="javascript:void(0)">
                             <span class="sidebar-mini-icon">LO</span>
