--- a/src/app/customer/customer.component.css
+++ b/src/app/customer/customer.component.css
@@ -1,5 +1,5 @@
-.ml5{
-    margin-left: 10px !important;
+.ml5 {
+  margin-left: 10px !important;
 }
 
 .switch {
@@ -9,7 +9,7 @@
   height: 34px;
 }
 
-.switch input { 
+.switch input {
   opacity: 0;
   width: 0;
   height: 0;
@@ -39,15 +39,15 @@
   transition: .4s;
 }
 
-input:checked + .slider {
+input:checked+.slider {
   background-color: #2196F3;
 }
 
-input:focus + .slider {
+input:focus+.slider {
   box-shadow: 0 0 1px #2196F3;
 }
 
-input:checked + .slider:before {
+input:checked+.slider:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
@@ -61,6 +61,20 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+
 .checked {
   color: gold;
+}
+
+::ng-deep .mat-form-field-appearance-fill  {
+  background-color: #ffffff !important;
+}
+
+/* mat-form-field {
+  width: 100% !important;
+
+} */
+
+::ng-deep .mat-form-field  {
+  width: 100%  !important;
 }
