--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -393,7 +393,7 @@
                 </div>
                 <div class="ml-md-auto">
                     <label class="">VIP</label>
-                    <label class="switch" >
+                    <label class="switch">
                         <input type="checkbox" checked class="switch-input" id="vip" name="vip"
                             [(ngModel)]="customerModel.vip" (click)="updateCustomerDetails()">
                         <span class="slider round"></span>
@@ -449,6 +449,28 @@
                     </div>
                 </div>
                 <div class="col-md-4">
+                    <label class="col-form-label">Select Booking Date</label>
+                    <div class="form-group">
+                        <input type="date" [(ngModel)]="appointmentModel.bookingdate" class="form-control"
+                            value="{{ formdate }}" name="bookingdate" id="bookingdate">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <label class="col-form-label">Select Booking Date</label>
+                    <br>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Select Booking Time Slot</mat-label>
+                        <mat-select [formControl]="timeControl" required  [(ngModel)]="appointmentModel.timeSlot">
+                            <mat-option>Select Time</mat-option>
+                            <mat-option *ngFor="let bti of bookingTimeInterval" [value]="bti.id" (click)="bookingTimeSelcted(bti.id)">
+                                {{bti.time}}
+                            </mat-option>
+                        </mat-select>
+                        <mat-error *ngIf="timeControl.hasError('required')">Please select your time.</mat-error>
+                        <mat-hint>{{timeControl.value?.sound}}</mat-hint>
+                    </mat-form-field>
+                </div>
+                <div class="col-md-4">
                     <label class="col-form-label">Select Combo Offer</label>
                     <div class="dropdown form-group">
                         <button class="dropdown-toggle btn btn btn btn-block" type="button" name="dropdownMenuButton"
@@ -483,37 +505,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="col-md-3">
-                    <label class="col-form-label">Select Service</label>
-                    <div class="btn-group bootstrap-select w-100">
-                        <div style="border: 1px #DDDDDD solid !important">
-                            <angular2-multiselect [ngModelOptions]="{standalone: true}" [data]="serviceData"
-                                [(ngModel)]="selectedServices" [settings]="dropdownSettings"
-                                (onSelect)="onItemSelect($event)" (onDeSelect)="OnItemDeSelect($event)"
-                                (onSelectAll)="onSelectAll($event)" name="items"
-                                (onDeSelectAll)="onDeSelectAll($event)">
-                            </angular2-multiselect>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <label class="col-form-label">Select Team Member</label>
-                    <div class="dropdown form-group">
-                        <button class="dropdown-toggle btn btn btn btn-block" type="button" name="dropdownMenuButton"
-                            id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-                            style="margin: 0px 0px !important;">
-                            {{ selectedEmp }}
-                        </button>
-                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                            <div class="dropdown-header">Select Team Member</div>
-                            <div *ngFor="let e of employeeReg">
-                                <a class="dropdown-item" (click)="selectEmpList(e.id)"
-                                    style="color:#252422 !important">{{e.fname}}
-                                    {{e.lname}}</a>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
             </div>
             <div class="row" *ngFor="let add of addService; let ind = index">
                 <div class="col-md-4">
