--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -21,7 +21,7 @@
             </ul>
         </nav>
         <div class="copyright pull-right">
-            &copy; {{test | date: 'yyyy'}}, Managed by <a href="http://www.keryar.com">Keryar</a>
+            &copy; {{test | date: 'yyyy'}}, Design & Develop by <a href="http://www.keryar.com">Keryar</a>
         </div>
     </div>
 </footer>
