--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
                             <div class=" page-carousel">
                                 <ngb-carousel>
                                     <ng-template ngbSlide *ngFor="let b of topban">
-                                        <img src="http://localhost:8090{{b.bannersimage}}"
+                                        <img src="http://localhost:8100{{b.bannersimage}}"
                                             style="height:40%;width:100%;" alt="Random first slide">
                                         <div class="carousel-caption">
                                         </div>
@@ -23,7 +23,7 @@
     </div>
     <div class="row">
 
-        <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Admin'">
+        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6" *ngIf="adminRole == 'Admin'">
             <div class="card card-stats" (click)="openCustomer()">
                 <div class="card-body ">
                     <div class="row">
@@ -49,7 +49,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Admin'">
+        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6" *ngIf="adminRole == 'Admin'">
             <div class="card card-stats" (click)="openServices()">
                 <div class="card-body ">
                     <div class="row">
@@ -75,7 +75,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Customer'">
+        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6" *ngIf="adminRole == 'Customer'">
             <div class="card card-stats" (click)="openCustomerService()">
                 <div class="card-body ">
                     <div class="row">
@@ -101,7 +101,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Customer'">
+        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6" *ngIf="adminRole == 'Customer'">
             <div class="card card-stats" (click)="openServCustom()">
                 <div class="card-body ">
                     <div class="row">
@@ -127,7 +127,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Customer'">
+        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6" *ngIf="adminRole == 'Customer'">
             <div class="card card-stats">
                 <div class="card-body ">
                     <div class="row">
@@ -153,7 +153,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Customer'">
+        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6" *ngIf="adminRole == 'Customer'">
             <div class="card card-stats" (click)="openServCustom()">
                 <div class="card-body ">
                     <div class="row">
@@ -179,7 +179,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Admin'">
+        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6" *ngIf="adminRole == 'Admin'">
             <div class="card card-stats" (click)="openDaily()">
                 <div class="card-body">
                     <div class="row">
@@ -205,7 +205,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Admin'">
+        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6" *ngIf="adminRole == 'Admin'">
             <div class="card card-stats" (click)="openMonthly()">
                 <div class="card-body ">
                     <div class="row">
@@ -231,7 +231,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Admin'">
+        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6" *ngIf="adminRole == 'Admin'">
             <div class="card card-stats" (click)="openEniquiry()">
                 <div class="card-body ">
                     <div class="row">
@@ -257,7 +257,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Admin'">
+        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6" *ngIf="adminRole == 'Admin'">
             <div class="card card-stats" (click)="openExpenses()">
                 <div class="card-body ">
                     <div class="row">
@@ -283,7 +283,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Customer'">
+        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6" *ngIf="adminRole == 'Customer'">
             <div class="card card-stats">
                 <div class="card-body ">
                     <div class="row">
@@ -309,7 +309,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Admin'">
+        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6" *ngIf="adminRole == 'Admin'">
             <div class="card card-stats" (click)="openOffer()">
                 <div class="card-body ">
                     <div class="row">
@@ -335,7 +335,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Admin'">
+        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6" *ngIf="adminRole == 'Admin'">
             <div class="card card-stats" (click)="openPendingOrder()">
                 <div class="card-body ">
                     <div class="row">
@@ -362,7 +362,7 @@
             </div>
         </div>
 
-        <!-- <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Customer'">
+        <!-- <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6" *ngIf="adminRole == 'Customer'">
             <div class="card card-stats" (click)="openOffer()">
                 <div class="card-body ">
                     <div class="row">
@@ -388,7 +388,7 @@
                 </div>
             </div>
         </div> -->
-        <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Admin'">
+        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6" *ngIf="adminRole == 'Admin'">
             <div class="card card-stats" (click)="openMembership()">
                 <div class="card-body ">
                     <div class="row">
